# routr-signal-engine

./: .daily_healthcheck  .env.example  .gitignore  ARCHITECTURE.md  README.md  VALIDATION.md  pyproject.toml
.github/workflows/: daily-signals.yml  dispatch-approved.yml  pipeline.yml  weekly-synthesis.yml
config/: github_repos.yaml  hf_papers.yaml  hn.yaml  keywords.yaml  newsletters.yaml  subreddits.yaml  topic_anchors.yaml  twitter_watch.yaml  x_fast_watch.yaml
config/prompts/: lead_extractor.md  pain_signal_classifier.md  post_drafter.md  weekly_synthesis.md  x_burst.md  x_reply_scorer.md
data/cache/: anchors-0685e563594a0338.json
src/routr_signal/: __init__.py  main.py
src/routr_signal/classify/: __init__.py  client.py  lead_extractor.py  pain_signal.py  post_drafter.py  synthesize.py  voice_lint.py  x_burst_drafter.py  x_reply_scorer.py
src/routr_signal/discord_dump/: __init__.py  crawl_queue.py  enrich.py  links.py  loader.py  privacy.py  types.py
src/routr_signal/lib/: beehiiv_client.py  buffer_client.py  config.py  cosine.py  db.py  dedupe.py  discord_inbox.py  embeddings.py  env.py  filters.py  http.py  logging.py  paths.py  signal_store.py  types.py
src/routr_signal/output/: __init__.py  discord.py  email.py  leads_queue.py  markdown_digest.py  slack.py
src/routr_signal/sources/: __init__.py  discord_paste.py  github_issues.py  hf_papers.py  hn.py  newsletters.py  reddit.py  twitter.py
src/routr_signal/tasks/: __init__.py  discord_dump_analyze.py  dispatch_approved.py  weekly_synthesis.py  x_burst.py  x_watch.py
tests/: dump_leads.py  e2e_iterations.py  smoke_cosine.py  smoke_github.py  smoke_json_extract.py  validate.py  verify_discord.py
tools/: install_hooks.ps1  twitter_login.py
tools/git-hooks/: pre-commit
