[project]
name = "routr-signal-engine"
version = "0.1.0"
description = "Daily LLM-infra pain-signal detection and digest pipeline for Routr GTM."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Routr team" }]

dependencies = [
    "anthropic>=0.40.0",
    "google-genai>=1.51.0",
    "openai>=1.60.0",
    "httpx>=0.28.0",
    "feedparser>=6.0.11",
    "pyyaml>=6.0.2",
    "python-dateutil>=2.9.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.7.0",
    "mypy>=1.13.0",
]

[project.scripts]
routr-signal = "routr_signal.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/routr_signal"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
