[project]
name = "routr-signal-engine"
version = "0.1.0"
description = "Personal daily signal aggregator with cosine + LLM relevance filter."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "private" }]

dependencies = [
    "anthropic>=0.40.0",
    "google-genai>=1.51.0",
    "openai>=1.60.0",
    "httpx>=0.28.0",
    "feedparser>=6.0.11",
    "pyyaml>=6.0.2",
    "python-dateutil>=2.9.0",
    "twikit>=2.3.0",
    "playwright>=1.49.0",
    "pyotp>=2.9.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.7.0",
    "mypy>=1.13.0",
]
# Optional: official Reddit API client. Not used by default; the Android-OAuth
# fallback in sources/reddit.py covers our read-only needs without a registered
# OAuth app. Enable if you ever want comment-level data or higher rate limits.
reddit-praw = [
    "praw>=7.7.1",
]

[project.scripts]
routr-signal      = "routr_signal.main:cli"
routr-synthesize  = "routr_signal.tasks.weekly_synthesis:cli"
routr-dispatch    = "routr_signal.tasks.dispatch_approved:cli"
routr-burst       = "routr_signal.tasks.x_burst:cli"
routr-x-watch     = "routr_signal.tasks.x_watch:cli"
routr-discord-dump-analyze = "routr_signal.tasks.discord_dump_analyze:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/routr_signal"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
